# Card-and-Roll-Tool

./: TODO.md  pyproject.toml
dice_cards/: cards.py  clipboard.py  config.py  dice.py  tables.py
dice_cards/tables/: __init__.py  cards_data.py  cli.py  combine.py  formatting.py  loading.py  matching.py  output.py  result.py  rolling.py  validation.py
tests/: conftest.py  test_cards.py  test_clipboard.py  test_config.py  test_dice.py  test_tables.py
